{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 168,
  "lineage": "3bb3e3b3-c061-3de5-a197-54a656a89cf3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057410425588:internet-gateway/igw-0925ded832dda4efa",
            "id": "igw-0925ded832dda4efa",
            "owner_id": "057410425588",
            "tags": {
              "Application": "FraudDetection",
              "CostCenter": "Engineering",
              "Name": "fraud-detection-igw-test",
              "Team": "Platform"
            },
            "tags_all": {
              "Application": "FraudDetection",
              "CostCenter": "Engineering",
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "fraud-detection-igw-test",
              "Project": "fraud-detection-system",
              "Team": "Platform"
            },
            "vpc_id": "vpc-0f41e62e18784c5dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057410425588:route-table/rtb-0bf494fa03127c2e1",
            "id": "rtb-0bf494fa03127c2e1",
            "owner_id": "057410425588",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0925ded832dda4efa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "FraudDetection",
              "CostCenter": "Engineering",
              "Name": "fraud-detection-public-rt-test",
              "Team": "Platform"
            },
            "tags_all": {
              "Application": "FraudDetection",
              "CostCenter": "Engineering",
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "fraud-detection-public-rt-test",
              "Project": "fraud-detection-system",
              "Team": "Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f41e62e18784c5dc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fca5dec29d575974",
            "route_table_id": "rtb-0bf494fa03127c2e1",
            "subnet_id": "subnet-09b5efc967d481868"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.eks_public",
            "aws_subnet.eks_public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0546299e469887bed",
            "route_table_id": "rtb-0bf494fa03127c2e1",
            "subnet_id": "subnet-007ba32bd3bcb0c3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.eks_public",
            "aws_subnet.eks_public",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057410425588:security-group/sg-08164dd8702495e3e",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08164dd8702495e3e",
            "ingress": [],
            "name": "fraud-detection-eks-cluster-sg-test",
            "name_prefix": "",
            "owner_id": "057410425588",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "FraudDetection",
              "CostCenter": "Engineering",
              "Name": "fraud-detection-eks-cluster-sg-test",
              "Team": "Platform"
            },
            "tags_all": {
              "Application": "FraudDetection",
              "CostCenter": "Engineering",
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "fraud-detection-eks-cluster-sg-test",
              "Project": "fraud-detection-system",
              "Team": "Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f41e62e18784c5dc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057410425588:security-group/sg-02d4dcfb8b68cfc18",
            "description": "Security group for EKS nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d4dcfb8b68cfc18",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow cluster to communicate with nodes",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08164dd8702495e3e"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "fraud-detection-eks-nodes-sg-test",
            "name_prefix": "",
            "owner_id": "057410425588",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "FraudDetection",
              "CostCenter": "Engineering",
              "Name": "fraud-detection-eks-nodes-sg-test",
              "Team": "Platform"
            },
            "tags_all": {
              "Application": "FraudDetection",
              "CostCenter": "Engineering",
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "fraud-detection-eks-nodes-sg-test",
              "Project": "fraud-detection-system",
              "Team": "Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f41e62e18784c5dc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057410425588:subnet/subnet-09b5efc967d481868",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b5efc967d481868",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "057410425588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "FraudDetection",
              "CostCenter": "Engineering",
              "Name": "fraud-detection-public-1-test",
              "Team": "Platform",
              "kubernetes.io/cluster/fraud-detection-cluster-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Application": "FraudDetection",
              "CostCenter": "Engineering",
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "fraud-detection-public-1-test",
              "Project": "fraud-detection-system",
              "Team": "Platform",
              "kubernetes.io/cluster/fraud-detection-cluster-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f41e62e18784c5dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057410425588:subnet/subnet-007ba32bd3bcb0c3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007ba32bd3bcb0c3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "057410425588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "FraudDetection",
              "CostCenter": "Engineering",
              "Name": "fraud-detection-public-2-test",
              "Team": "Platform",
              "kubernetes.io/cluster/fraud-detection-cluster-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Application": "FraudDetection",
              "CostCenter": "Engineering",
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "fraud-detection-public-2-test",
              "Project": "fraud-detection-system",
              "Team": "Platform",
              "kubernetes.io/cluster/fraud-detection-cluster-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f41e62e18784c5dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:057410425588:vpc/vpc-0f41e62e18784c5dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04584d18db1309605",
            "default_route_table_id": "rtb-07320043801ad2f5d",
            "default_security_group_id": "sg-04cb38401e2700ebc",
            "dhcp_options_id": "dopt-0819504c7fe857acd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f41e62e18784c5dc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07320043801ad2f5d",
            "owner_id": "057410425588",
            "tags": {
              "Application": "FraudDetection",
              "CostCenter": "Engineering",
              "Name": "fraud-detection-vpc-test",
              "Team": "Platform",
              "kubernetes.io/cluster/fraud-detection-cluster-test": "shared"
            },
            "tags_all": {
              "Application": "FraudDetection",
              "CostCenter": "Engineering",
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "fraud-detection-vpc-test",
              "Project": "fraud-detection-system",
              "Team": "Platform",
              "kubernetes.io/cluster/fraud-detection-cluster-test": "shared"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}